Applies standard java formatting